added basic queue system
currently only one room but i'll expand it very soon

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
 
 <body>
 
+
+    <div class = "home-screen"> 
+        <button id = "queue"> Find a match! </button>
+    </div>
+    
+    <div class = "queue-screen"> 
+        <h1> Searching for another player... </h1> 
+    </div>
+
     <div class = "game-screen"> 
         <button id = "rock"> Rock </button>
         <button id = "paper"> Paper </button>
