--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
             <h1> It's a draw! </h1>
         </div>
         <h1 id = "score-display"></h1> 
+        <h1 id = "countdown">3</h1> 
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
